@startuml
hide empty members

package "BusTransactions"{

    abstract class AbstractBus

    class BusBuilder
    class ConreteBus
    class DefaultBusFactory

    package "Encoding"{
        protocol EncodingProtocol
        }
    package "BusPlugins"{
        interface BusPluginInterface
        }
    package "Compression"{
        protocol CompressionProtocol
        }
    package "Serialization"{
        protocol SerializationProtocol
        }

    ConreteBus -l-|> AbstractBus: <<implement>>
    BusBuilder --|> ConreteBus: <<create>>
    DefaultBusFactory ..> BusBuilder: <<use>>
    AbstractBus "1" .u.|> "1" BusPluginInterface
    AbstractBus "1" o-- "1" EncodingProtocol
    AbstractBus "1" o-- "1" CompressionProtocol
    AbstractBus "1" o-- "1" SerializationProtocol
}

@enduml